--- a/curs1/solutii/ap2.html
+++ b/curs1/solutii/ap2.html
@@ -40,7 +40,7 @@
           <div class="card-block">
             <h4 class="card-title">Orange</h4>
             <p class="card-text">Price: $0.5</p>
-            <a id="orange" href="#" data-bs-toggle="modal" data-bs-target="#modalForm" data-name="Orange"
+            <a id="orange" href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#modalForm" data-name="Orange"
               data-description="Orange show details" data-price="0.5" class="add-to-cart btn btn-primary">View more</a>
           </div>
         </div>
@@ -102,8 +102,10 @@
       var button = $(event.relatedTarget); //Button that triggered the modal
       const produs = button.data('name') //need to find the button and get product
       const pret = button.data('price') //need to find the button and get price
+      const description = button.data('description');
       $(".modal-header #titleModalLabel").html(produs);
       $(".modal-body #price").html(pret);
+      $(".modal-body #description").html(description);
       id = button.attr('id');
       // var datainfo = document.getElementById(id);
       alert(JSON.stringify(button));
