--- a/curs2/solutii/ap2.html
+++ b/curs2/solutii/ap2.html
@@ -15,9 +15,9 @@
     ./img/slide1-medium.png 768w, ./img/slide1-large.png 992w">
 
     <script>
-        //  document.write('<p> Pixel ratio: '+window.devicePixelRatio +'</p>');
-        //  document.write("<p>Dimensiunile disponibile width/height: " + screen.availWidth + "*" + screen.availHeight+"</p>");
-        //  document.write('<p> Dimensiunea reala : '+window.devicePixelRatio * screen.availWidth +'</p>');
+         document.write('<p> Pixel ratio: '+window.devicePixelRatio +'</p>');
+         document.write("<p>Dimensiunile disponibile width/height: " + screen.availWidth + "*" + screen.availHeight+"</p>");
+         document.write('<p> Dimensiunea reala : '+window.devicePixelRatio * screen.availWidth +'</p>');
     </script>
 
 </body>
