--- a/curs2/solutii/ap6.html
+++ b/curs2/solutii/ap6.html
@@ -22,14 +22,14 @@
     </style>
 </head>
 
-<body>
+<body >
     <div class="container">
         <div class="row">
             <div class="form-group">
                 <label class="col-sm-2 control-label" for="field1">Adauga colegi</label>
                 <div class="col-sm-10">
                     <div class="dynamic-wrap">
-                        <form role="form" autocomplete="off">
+                        <form role="form" autocomplete="off" action="http://localhost/demo/test/test.php" method="post">
                             <div id = "dynamic-stuff" class="dynamic-stuff">
                                 <div class="entry input-group">
                                     <input class="form-control student" name="fields[]" type="text"
