--- a/shop/index.html
+++ b/shop/index.html
@@ -16,7 +16,7 @@
     <nav id="navbar_top" class="navbar  navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
             <a href="#" class="navbar-brand">
-                <img src="./img/logo.svg" height="28" alt="Logo">
+                <img src="./assets/img/logo.svg" height="28" alt="Logo">
             </a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -47,21 +47,29 @@
             <!-- Wrapper for carousel items -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./img/slide1.png" class="d-block w-100" alt="Slide 1">
+                    <img src="./assets/img/slide1.png" class="d-block w-100" alt="Slide 1">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
                         <p>Some demonstrative placeholder content for the first slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/slide2.png" class="d-block w-100" alt="Slide 2">
+                    <img src="./assets/img/slide2.png" class="d-block w-100" alt="Slide 2">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Second slide label</h5>
                         <p>Some demonstrative placeholder content for the second slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/slide3.png" class="d-block w-100" alt="Slide 3">
+                    <picture>
+                        <source media="(min-width:992px)" srcset="./assets/img/slide3-large.webp">
+                        <source media="(min-width:768px)" srcset="./assets/img/slide3-medium.webp">
+                        <source media="(min-width:576px)" srcset="./assets/img/slide3-small.webp">
+                        <img src="./assets/img/slide3.png" class="d-block w-100" alt="Slide 3">
+                    </picture>
+
+
+                    <!-- <img src="./assets/img/slide3.png" class="d-block w-100" alt="Slide 3"> -->
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Third slide label</h5>
                         <p>Some demonstrative placeholder content for the third slide.</p>
@@ -203,9 +211,11 @@
         </div>
     </section>
 
-    <!-- START Section  Validation -->
+    <!-- STOP Section  Validation -->
 
-
+    <div className="scroll-to-top">
+        <span class="btn gototop btn-position btn-style">^</i>
+    </div>
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <!-- Bootstrap js -->
