--- a/curs3/solutii/ap3.html
+++ b/curs3/solutii/ap3.html
@@ -58,7 +58,7 @@ button {
         // FETCHING XML
         const loadHere = document.querySelector(".load-here");
         const showXml = document.querySelector(".show-xml");
-        const path = "https://127.0.0.1:5500/curs3/data/ap2.xml";
+        const path = "http://127.0.0.1:5500/curs3/solutii/data/ap2.xml";
         const dataResource = {};
 
         // parsing XML
