--- a/curs4/solutii/ap7.html
+++ b/curs4/solutii/ap7.html
@@ -10,7 +10,7 @@
         $(document).ready(function () {
             $("button").click(function (e) {
                 $.ajax({
-                    url: 'http://localhost/mysite/post.php',
+                    url: 'http://localhost/demo/post.php',
                     //headers: {"Access-Control-Allow-Origin:": "*"},
                     dataType: 'text',
                     type: 'post',
